--- a/api/package.json
+++ b/api/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/mongodb": "^3.5.33",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "web-push": "^3.4.4"
   }
 }
